maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:21: error: missing argument list for method getIndication in class ShortestPathMaze
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `getIndication _` or `getIndication(_,_)` instead of `getIndication`.
  if ((y>0)&&(!aMurNord(x,y))&&(getIndication(x,y-1)=9999)){
                                ^ShortestPathMaze:24: error: missing argument list for method getIndication in class ShortestPathMaze
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `getIndication _` or `getIndication(_,_)` instead of `getIndication`.
  if ((x>0)&&(!aMurOuest(x,y))&&(getIndication(x-1,y)=9999)){
                                 ^ShortestPathMaze:27: error: missing argument list for method getIndication in class ShortestPathMaze
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `getIndication _` or `getIndication(_,_)` instead of `getIndication`.
  if ((y<(getMondeHauteur()-1))&&(!aMurNord(x,y+1))&&(getIndication(x,y-1)=9999)){
                                                      ^ShortestPathMaze:30: error: missing argument list for method getIndication in class ShortestPathMaze
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `getIndication _` or `getIndication(_,_)` instead of `getIndication`.
  if ((x<getMondeLargeur()-1)&&(!aMurOuest(x+1,y))&&(getIndication(x,y-1)=9999)){
                                                     ^